// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render 1`] = `
<div
  class="item"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-search"
      class="su-search icon"
    />
    <span
      class="text"
    >
      Test
    </span>
  </div>
</div>
`;

exports[`The component should render active 1`] = `
<div
  class="item active"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-search"
      class="su-search icon"
    />
    <span
      class="text"
    >
      Test
    </span>
  </div>
</div>
`;

exports[`The component should render with children 1`] = `
<div
  class="item"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-cog"
      class="su-cog icon"
    />
    <span
      class="text"
    >
      Settings
    </span>
    <span
      aria-label="su-angle-right"
      class="su-angle-right clickable childrenIndicator"
      role="button"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`The component should render with children an active child and expanded 1`] = `
<div
  class="item active"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-cog"
      class="su-cog icon"
    />
    <span
      class="text"
    >
      Settings
    </span>
    <span
      aria-label="su-angle-down"
      class="su-angle-down clickable childrenIndicator"
      role="button"
      tabindex="0"
    />
  </div>
  <div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        <span
          class="text"
        >
          Settings 1
        </span>
      </div>
    </div>
    <div
      class="item active"
    >
      <div
        class="title"
        role="button"
      >
        <span
          class="text"
        >
          Settings 2
        </span>
      </div>
    </div>
  </div>
</div>
`;
